[gd_scene load_steps=25 format=2]

[ext_resource path="res://Images/Imps/red/walk - vanilla.png" type="Texture" id=1]
[ext_resource path="res://Images/Imps/red/attack - vanilla.png" type="Texture" id=2]
[ext_resource path="res://Images/Imps/red/imp death.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Red_Range_Demon_Script.gd" type="Script" id=4]
[ext_resource path="res://Audio/Death.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 20 )

[sub_resource type="CircleShape2D" id=19]
radius = 328.098

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 20, 24 )

[node name="Red_Range_Demon" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "walk"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, -1 )
shape = SubResource( 1 )

[node name="Area_of_sight" type="Area2D" parent="."]

[node name="Collision_Movment" type="CollisionShape2D" parent="Area_of_sight"]
shape = SubResource( 19 )

[node name="Rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Rays"]
enabled = true
collision_mask = 5

[node name="Life_Removerer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Life_Removerer"]
position = Vector2( 12, 0 )
shape = SubResource( 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Fire_delay" type="Timer" parent="."]

[connection signal="body_entered" from="Area_of_sight" to="." method="_on_Area_of_sight_body_entered"]
[connection signal="body_exited" from="Area_of_sight" to="." method="_on_Area_of_sight_body_exited"]
[connection signal="body_entered" from="Life_Removerer" to="." method="_on_Life_Removerer_body_entered"]
[connection signal="timeout" from="Fire_delay" to="." method="_on_Fire_delay_timeout"]
